[project]
name = "langgraph-revision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "dotenv>=0.9.9",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community[vectorstore]>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "sentence-transformers>=5.2.2",
]
